refactor: 게시글 등록 내부로직 개선